--- a/product-mgmt-service.yml
+++ b/product-mgmt-service.yml
@@ -12,4 +12,5 @@ eureka:
     register-with-eureka: true
     fetch-registry: false
     service-url:
-      defaultZone:http://localhost:8761/eureka
+      defaultZone:
+        http://localhost:8761/eureka
